tests/baselines/reference/dynamicNamesErrors.errors.txt
tests/cases/compiler/dynamicNamesErrors.ts(5,5): error TS2300: Duplicate identifier '1'.
tests/cases/compiler/dynamicNamesErrors.ts(6,5): error TS2300: Duplicate identifier '1'.
tests/cases/compiler/dynamicNamesErrors.ts(19,1): error TS2322: Type 'T2' is not assignable to type 'T1'.
  Types of property '1' are incompatible.
    Type 'string' is not assignable to type 'number'.
tests/cases/compiler/dynamicNamesErrors.ts(20,1): error TS2322: Type 'T1' is not assignable to type 'T2'.
  Types of property '1' are incompatible.
    Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/dynamicNamesErrors.ts (4 errors) ====
    const c0 = "1";
    const c1 = 1;
    
    interface T0 {
        [c0]: number;
        ~~~~
!!! error TS2300: Duplicate identifier '1'.
        1: number;
        ~
!!! error TS2300: Duplicate identifier '1'.
    }
    
    interface T1 {
        [c0]: number;
    }
    
    interface T2 {
        [c0]: string;
    }
    
    let t1: T1;
    let t2: T2;
    t1 = t2;
    ~~
!!! error TS2322: Type 'T2' is not assignable to type 'T1'.
!!! error TS2322:   Types of property '1' are incompatible.
!!! error TS2322:     Type 'string' is not assignable to type 'number'.
    t2 = t1;
    ~~
!!! error TS2322: Type 'T1' is not assignable to type 'T2'.
!!! error TS2322:   Types of property '1' are incompatible.
!!! error TS2322:     Type 'number' is not assignable to type 'string'.